apps/routers/urbit-ships/socryx-topled-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: socryx-topled
  namespace: traefik-staging
spec:
  ports:
    - name: urbit-https
      protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 0
    - name: urbit-http
      protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: socryx-topled
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.102
  ports:
  - port: 8443
    name: urbit-https
  - port: 8080
    name: urbit-http
