apps/routers/urbit-ships/socryx-topled-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: socryx-topled
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  # - websecure
  routes:
  - kind: Rule
    match: Host(`socryx-topled.arvo.network`) && PathPrefix(`/`)
    services:
    - kind: Service
      name: socryx-topled
      namespace: traefik-staging
      port: 80
      # scheme: https
  # tls:
  #   certResolver: prodresolver

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: socryx-topled
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`socryx-topled.arvo.network`)
    services:
    - name: socryx-topled
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
